log
Thu 04 May 2023 09:19:38 PM UTC: 
 tests:  0|5
total_score: 0/70
ad45bcf
Thu 04 May 2023 09:25:16 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:9: error: unused variable ‘j’ [-Werror=unused-variable]
   55 |     int j;
      |         ^
sudoku.c:54:9: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |     int i;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
7c60d44
Thu 04 May 2023 09:25:24 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
fa88d9b
Thu 04 May 2023 09:37:51 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  5|3
total_score: 35/70
dfee333
Sat 06 May 2023 10:57:37 PM UTC: 
 sudoku.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:98:11: error: unknown type name ‘retrun’
   98 |           retrun list;
      |           ^~~~~~
sudoku.c:98:18: error: unused variable ‘list’ [-Werror=unused-variable]
   98 |           retrun list;
      |                  ^~~~
cc1: all warnings being treated as errors
Compilation failed
89331a7
Sat 06 May 2023 10:57:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0f8b44a
Sat 06 May 2023 10:58:35 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:77:7: error: ‘k’ undeclared (first use in this function)
   77 |  for (k = 0; k < 9; k++) {
      |       ^
sudoku.c:77:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:79:14: error: ‘l’ undeclared (first use in this function)
   79 |         for (l = 0; l < 9; l++) {
      |              ^
Compilation failed
28367be
Sat 06 May 2023 10:58:48 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
4179f5b
Sat 06 May 2023 11:09:24 PM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
4f1d5fe
Sat 06 May 2023 11:10:00 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
c3db133
Sat 06 May 2023 11:15:02 PM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
a555b34
Sat 06 May 2023 11:18:40 PM UTC: 
 sudoku.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:140:13: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  140 |     while (!isEmpty(stack)) {
      |             ^~~~~~~
      |             is_empty
sudoku.c:141:25: error: void value not ignored as it ought to be
  141 |         Node* current = pop(stack); // Sacar el primer nodo de la pila
      |                         ^~~
sudoku.c:151:26: error: implicit declaration of function ‘getFront’ [-Werror=implicit-function-declaration]
  151 |         Node* adj_node = getFront(adj_nodes); // Obtener el primer nodo adyacente
      |                          ^~~~~~~~
sudoku.c:151:26: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:155:24: error: implicit declaration of function ‘getNext’ [-Werror=implicit-function-declaration]
  155 |             adj_node = getNext(adj_nodes); // Obtener el siguiente nodo adyacente
      |                        ^~~~~~~
sudoku.c:155:22: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  155 |             adj_node = getNext(adj_nodes); // Obtener el siguiente nodo adyacente
      |                      ^
sudoku.c:159:9: error: implicit declaration of function ‘destroyList’ [-Werror=implicit-function-declaration]
  159 |         destroyList(adj_nodes); // Liberar la memoria de la lista de nodos adyacentes
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
62906f5
Sat 06 May 2023 11:20:25 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|0
d41b2de
Sat 06 May 2023 11:20:45 PM UTC: 
 sudoku.c | 27 +--------------------------
 1 file changed, 1 insertion(+), 26 deletions(-)
 tests:  6|2
total_score: 45/70
c842816
Sat 06 May 2023 11:24:38 PM UTC: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  0|0
3e96543
